compile_tests/expected/control_flow.stderr
error: labels not supported
 --> compile_tests/src/control_flow.rs:6:9
  |
6 |         'outer: while true {}
  |         ^^^^^^